--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,144 @@
-body{
-    background-color: #c0ffee;
+a{
+    color: green;
+    margin: 10px 20px;
+    font-family: sans-serif;
+    text-decoration: none;
+}
+body{css/style.css
     margin: 0;
+    text-align: center;
+    font-family: 'Merriweather', serif;
 }
 h1{
-    margin-top: 0;
+    font-size: 5.625rem;
+    margin: 2.6rem auto 0 auto;
+    font-family: 'Sacramento', cursive;
+    color:  #66BFBF;
 }
-div{
-    background-color: #e4f9f5;
+h2{
+    font-size: 2.5rem;
+    font-family: 'Montserrat', sans-serif;
+    color: #66BFBF;
+    padding-bottom: 10px;
 }
-.intro{
+h3{
+    color: #11999E;
+    font-family: 'Montserrat', sans-serif;
+}
+hr{
+    border: dotted orange 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
+}
+p{
+    color: #40514E;
+    line-height: 2;
+}
+.bottom-container{
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
+}
+.btm-cld{
+    position: absolute;
+    left: 300px;
+    bottom: 250px;
+}
+.contact-msg{
+    width: 40%;
+    margin: 40px auto 60px;
+}
+.copyright{
+    color: #eaf6f6;
+    font-size: 0.75rem;
+    padding: 20px 0px;
+}
+.img{
+    height: 350px;
+    width: 350px;
+    margin: 0px;
+    border-radius: 50%
+}
+.intro1{
     text-decoration: underline;
+}
+.intro2{
+    width: 30%;
+    margin: auto;
+}
+.link:hover{
+    color: crimson;
+}
+.middle-container{
+    margin: 100px 0;
+}
+.skill-img1{
+    width: 25%;
+    height: 25%;
+    float: left;
+    margin-right: 30px;
+}
+.skill-img2{
+    width: 25%;
+    height: 25%;
+    float: right;
+    margin-left: 30px;
+}
+.skill-row{
+    width: 50%;
+    margin: 100px auto;
+    text-align: left;
+}
+.top-cld{
+    position: absolute;
+    right: 300px;
+    top: 40px;
+}
+.top-container{
+    background-color: darkslategray; /**/
+    position: relative;
+    padding-top: 100px;
+}
+.btn {
+	-moz-box-shadow:inset 0px -3px 7px 0px #11cddf;
+	-webkit-box-shadow:inset 0px -3px 7px 0px #11cddf;
+	box-shadow:inset 0px -3px 7px 0px #11cddf;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #11cddf), color-stop(1, #11999e) );
+	background:-moz-linear-gradient( center top, #11cddf 5%, #11999e 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#11cdd4', endColorstr='#11999e');
+	background-color:#11cdd4;
+	-webkit-border-top-left-radius:8px;
+	-moz-border-radius-topleft:8px;
+	border-top-left-radius:8px;
+	-webkit-border-top-right-radius:8px;
+	-moz-border-radius-topright:8px;
+	border-top-right-radius:8px;
+	-webkit-border-bottom-right-radius:8px;
+	-moz-border-radius-bottomright:8px;
+	border-bottom-right-radius:8px;
+	-webkit-border-bottom-left-radius:8px;
+	-moz-border-radius-bottomleft:8px;
+	border-bottom-left-radius:8px;
+text-indent:0;
+	border:1px solid #0b0e07;
+	display:inline-block;
+	color:#ffffff;
+	font-family: 'Montserrat', sans-serif;
+	font-size:20px;
+	font-weight:bold;
+	font-style:normal;
+height:50px;
+	line-height:50px;
+width:140px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:0px 1px 0px #40514E;
+}.btn:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #30e3cb), color-stop(1, #2bc4ad) );
+	background:-moz-linear-gradient( center top, #30e3cb 5%, #2bc4ad 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#30e3cb', endColorstr='#2bc4ad');
+	background-color:#2bc4ad;
+}.btn:active {
+	position:relative;
+	top:1px;
 }
